examples/openmole-johndoe-app/openmole-johndoe-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: openmole-johndoe
  namespace: openmole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openmole-johndoe
  template:
    metadata:
      labels:
        app: openmole-johndoe
    spec:
      containers:
      - name: openmole-johndoe
        image: openmole/openmole:8.0-SNAPSHOT
        command:
          - "bin/bash"
          - "-c"
          - "openmole --port 8443 --http --remote --http-sub-directory johndoe"
        ports:
        - containerPort: 8443
          protocol: TCP
        resources: {}
        imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
